--- a/package.json
+++ b/package.json
@@ -11,14 +11,14 @@
   "author": "",
   "license": "MIT",
   "devDependencies": {
+    "@easyops/git-exec-and-restage": "^1.0.2",
     "husky": "^0.14.3",
     "lint-staged": "^4.0.3",
     "prettier": "^1.5.3"
   },
   "lint-staged": {
     "*.js": [
-      "prettier --write",
-      "git add"
+      "git-exec-and-restage prettier --write --"
     ]
   }
 }
