--- a/package.json
+++ b/package.json
@@ -12,12 +12,15 @@
   "license": "MIT",
   "devDependencies": {
     "@easyops/git-exec-and-restage": "^1.0.2",
+    "eslint": "^4.5.0",
+    "eslint-config-prettier": "^2.3.0",
     "husky": "^0.14.3",
     "lint-staged": "^4.0.3",
     "prettier": "^1.5.3"
   },
   "lint-staged": {
     "*.js": [
+      "eslint",
       "git-exec-and-restage prettier --write --"
     ]
   }
